Updated key resolver
